Worked on QA feedback points in Driver panel

--- a/app/src/main/res/layout/activity_profile_creation_driver.xml
+++ b/app/src/main/res/layout/activity_profile_creation_driver.xml
@@ -129,6 +129,7 @@
                                 android:imeOptions="actionNext"
                                 android:inputType="textCapSentences"
                                 android:paddingBottom="5dp"
+                                android:digits="abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ"
                                 android:singleLine="true"
                                 android:textColor="@color/black"
                                 android:textSize="12sp"
@@ -255,6 +256,7 @@
                                     android:fontFamily="@font/avenir_black"
                                     android:imeOptions="actionNext"
                                     android:inputType="phone"
+                                    android:digits="0123456789"
                                     android:paddingLeft="8dp"
                                     android:paddingBottom="5dp"
                                     android:singleLine="true"
@@ -298,6 +300,7 @@
                             android:button="@drawable/radio_selector"
                             android:fontFamily="@font/avenir_black"
                             android:paddingLeft="10dp"
+                            android:checked="true"
                             android:text="Male" />
 
                         <RadioButton
@@ -342,6 +345,7 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_weight="1"
+                            android:checked="true"
                             android:button="@drawable/radio_selector"
                             android:fontFamily="@font/avenir_black"
                             android:paddingLeft="10dp"
@@ -962,11 +966,9 @@
                         android:layout_marginLeft="@dimen/_5sdp"
                         android:layout_weight="1"
                         android:fontFamily="@font/avenir_black"
-                        android:text="(if you want make business, Optional)"
+                        android:text="(If you want make business)"
                         android:textColor="@color/grey"
-                        android:textSize="12sp"
-                        app:drawableEndCompat="@drawable/drop_down"
-                        app:drawableRightCompat="@drawable/drop_down" />
+                        android:textSize="12sp" />
 
                 </LinearLayout>
 
@@ -975,7 +977,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="vertical"
-                    android:visibility="gone">
+                    android:visibility="visible">
 
                     <LinearLayout
                         android:layout_width="match_parent"
@@ -1007,7 +1009,7 @@
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:layout_marginLeft="5dp"
-                                android:hint="Business or Company Name"
+                                android:hint="Business or Company Name (Optional)"
                                 android:textColorHint="@color/grey"
                                 app:hintTextAppearance="@style/TextInputLayoutHintText"
                                 app:hintTextColor="@android:color/darker_gray">
@@ -1063,7 +1065,7 @@
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:layout_marginLeft="5dp"
-                                android:hint="Business Street Address 1"
+                                android:hint="Business Street Address 1 (Optional)"
                                 android:textColorHint="@color/grey"
                                 app:hintTextAppearance="@style/TextInputLayoutHintText"
                                 app:hintTextColor="@android:color/darker_gray">
@@ -1119,7 +1121,7 @@
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:layout_marginLeft="5dp"
-                                android:hint="Business Street Address 2"
+                                android:hint="Business Street Address 2 (Optional)"
                                 android:textColorHint="@color/grey"
                                 app:hintTextAppearance="@style/TextInputLayoutHintText"
                                 app:hintTextColor="@android:color/darker_gray">
@@ -1175,7 +1177,7 @@
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:layout_marginLeft="5dp"
-                                android:hint="Business City"
+                                android:hint="Business City (Optional)"
                                 android:textColorHint="@color/grey"
                                 app:hintTextAppearance="@style/TextInputLayoutHintText"
                                 app:hintTextColor="@android:color/darker_gray">
@@ -1231,7 +1233,7 @@
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:layout_marginLeft="5dp"
-                                android:hint="Business Country"
+                                android:hint="Business Country (Optional)"
                                 android:textColorHint="@color/grey"
                                 app:hintTextAppearance="@style/TextInputLayoutHintText"
                                 app:hintTextColor="@android:color/darker_gray">
@@ -1286,7 +1288,7 @@
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:layout_marginLeft="5dp"
-                                android:hint="VAT Number"
+                                android:hint="VAT Number (Optional)"
                                 android:textColorHint="@color/grey"
                                 app:hintTextAppearance="@style/TextInputLayoutHintText"
                                 app:hintTextColor="@android:color/darker_gray">
