--- a/app/src/main/res/layout/fragment_add_vehicle.xml
+++ b/app/src/main/res/layout/fragment_add_vehicle.xml
@@ -113,6 +113,7 @@
                                 android:background="@null"
                                 android:fontFamily="@font/avenir_black"
                                 android:imeOptions="actionNext"
+                                android:digits="abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789"
                                 android:inputType="textCapCharacters"
                                 android:paddingBottom="5dp"
                                 android:singleLine="true"
@@ -168,8 +169,9 @@
                                 android:layout_height="wrap_content"
                                 android:background="@null"
                                 android:fontFamily="@font/avenir_black"
-                                android:inputType="textCapSentences"
                                 android:imeOptions="actionNext"
+                                android:digits="abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789"
+                                android:inputType="textCapSentences"
                                 android:paddingBottom="5dp"
                                 android:singleLine="true"
                                 android:textColor="@color/black"
@@ -278,6 +280,7 @@
                                 android:imeOptions="actionNext"
                                 android:paddingBottom="5dp"
                                 android:singleLine="true"
+                                android:digits="abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789"
                                 android:textColor="@color/black"
                                 android:textSize="12sp"
                                 android:translationY="5dp" />
@@ -444,6 +447,7 @@
                                 android:inputType="number"
                                 android:imeOptions="actionNext"
                                 android:paddingBottom="5dp"
+                                android:maxLength="2"
                                 android:singleLine="true"
                                 android:textColor="@color/black"
                                 android:textSize="12sp"
@@ -590,6 +594,7 @@
                         android:imeOptions="actionDone"
                         android:inputType="textCapSentences"
                         android:hint="Describe here...."
+                        android:digits="abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789"
                         android:padding="10dp"
                         android:textColor="@color/black"
                         android:textSize="12sp"
