Worked on QA points done in m3

--- a/app/src/main/res/layout/activity_profile_creation_driver.xml
+++ b/app/src/main/res/layout/activity_profile_creation_driver.xml
@@ -720,7 +720,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="15dp"
-                    android:orientation="horizontal">
+                    android:orientation="horizontal"
+                    tools:ignore="ExtraText">
 
                     <LinearLayout
                         android:layout_width="wrap_content"
@@ -734,8 +735,7 @@
                             android:layout_gravity="center"
                             android:src="@drawable/card_all" />
 
-                    </LinearLayout>
-                    `
+                    </LinearLayout>        `
 
                     <LinearLayout
                         android:layout_width="match_parent"
